# soundchip

./: .gitignore  Cargo.toml  readme.md  todo.md
.github/workflows/: rust.yml
example/: Cargo.toml  target
example/src/: main.rs  wave_writer.rs
src/: channel.rs  channel_envelope.rs  chip_specs.rs  envelope.rs  error.rs  lib.rs  math.rs  noise.rs  note.rs  pitch.rs  prelude.rs  presets.rs  rng.rs  sample.rs  sound_chip.rs  specs.rs
src/_unused/: if16.rs  map.rs  ops.rs
src/_unused/presets/: env.rs  tremolo.rs  vibratto.rs
src/envelope/: knot.rs  presets.rs  state.rs  vibratto.rs
src/prelude/: channel.rs  envelope.rs  envelope_preset.rs  error.rs  loop_kind.rs  note.rs  sample.rs  sound.rs  sound_chip.rs  sound_preset.rs  specs.rs  values.rs
src/prelude/envelope/: knot.rs  state.rs  tests.rs
src/prelude/specs/: chip.rs  noise.rs  pan.rs  pitch.rs  tremolo.rs  vibratto.rs  volume.rs  wavetable.rs
src/prelude/values/: normal.rs  normal_signed.rs
src/presets/: chips.rs  envelopes.rs  knots.rs  noise.rs  pan.rs  pitch.rs  tremolo.rs  vibratto.rs  volume.rs  wavetables.rs
src/specs/: chip.rs  noise.rs  pan.rs  pitch.rs  tremolo.rs  volume.rs  wavetable.rs
tests/: envelope.rs  math.rs
