[package]
name = "soundchip"
version = "0.2.0"
edition = "2021"
description = "Software sinth with configurable channels for authentic sounding virtual sound chips."
license = "MIT"
repository = "https://github.com/chipmusic/soundchip"
documentation = "https://docs.rs/soundchip/latest/"
categories = ["no-std"]

[dependencies]
libm = "0.2.8"

[workspace]
members = [ "example"]
